crates/analyzer/tests/snapshots/errors__call_undefined_function_on_memory_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: No function `doesnt_exist` exists on type `Something`
  ┌─ compile_errors/call_undefined_function_on_memory_struct.fe:7:12
  │
7 │     thingy.doesnt_exist()
  │            ^^^^^^^^^^^^ undefined function


